--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
     background-color: white;
-    color: #424242;
+    color: black;
 }
 
 header {
