--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -16,13 +16,13 @@ header h1 {
     margin-bottom: 0.5rem;
 }
 
-main {
+main, form {
     padding: 2rem 1rem;
     max-width: 800px;
     margin: auto;
 }
 
-table {
+table, form {
     width: 100%;
     border-collapse: collapse;
     background-color: white;
@@ -69,4 +69,47 @@ footer {
     background-color: #E8F5E9;
     font-style: italic;
 }
-  
+
+form {
+    background-color: #FAFAFA;
+}
+
+form label {
+    font-weight: bold;
+}
+
+.form-element
+{
+  width: 100%;
+  margin-top: 0.5rem;
+  margin-bottom: 2rem;
+  padding: 0.5rem;
+  border-radius: 10px; 
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  font-family: 'Segoe UI', sans-serif;
+}
+
+form .checkboxes {
+    border: none;
+    padding: 0%;
+}
+
+form input[type="checkbox"] {
+  border-radius: 10px;
+}
+
+form button {
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 10px; 
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: #45a045;
+}
