--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -16,13 +16,13 @@ header h1 {
     margin-bottom: 0.5rem;
 }
 
-main, form {
+main {
     padding: 2rem 1rem;
     max-width: 800px;
     margin: auto;
 }
 
-table, form {
+table {
     width: 100%;
     border-collapse: collapse;
     background-color: white;
@@ -72,6 +72,11 @@ footer {
 
 form {
     background-color: #FAFAFA;
+    padding: 2rem 1rem;
+    border-collapse: collapse;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
 }
 
 form label {
